modify main html

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -41,6 +41,8 @@
 
             <footer>
                 <p>
+                    Built by Dong Chen
+                    Based on examples of playframwork community: 
                     <a href="http://www.playframework.org">www.playframework.org</a>
                 </p>
             </footer>
