--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,7 +4,7 @@
 
 <html>
     <head>
-        <title>Websocket Chat-Room</title>
+        <title>FSE_Chat_Room</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
@@ -15,7 +15,7 @@
         <div class="topbar">
             <div class="fill">
                 <div class="container">
-                    <a class="brand" href="@routes.Application.index()">Websocket Chat-Room</a>
+                    <a class="brand" href="@routes.Application.index()">Welcome to FSE Chat Room</a>
                     
                     @connected.map { username =>
                         <p class="pull-right">
@@ -42,6 +42,8 @@
             <footer>
                 <p>
                     Built by Dong Chen
+                </p>
+                <p>
                     Based on examples of playframwork community: 
                     <a href="http://www.playframework.org">www.playframework.org</a>
                 </p>
