--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,8 +4,19 @@
         
     <div class="alert-message block-message info">
         <p>
-            <strong>This is the Play 2.0 Websocket sample application!</strong> 
-            To start, choose a username and sign in using the top right form.
+            The system should allow a user to:
+        </p>
+        <p>
+            - Enter the chat room with his/her name
+        </p>
+        <p>
+            - See other users’ chat messages
+        </p>
+        <p>
+            - Post a chat message
+        </p>
+        <p>
+            - Leave the chat room
         </p>
     </div>
     
