modify main html

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,7 +4,7 @@
 
 <html>
     <head>
-        <title>FSE_Chat_Room</title>
+        <title>FSE Chat Room</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
@@ -25,7 +25,7 @@
                     }.getOrElse {
                         <form action="@routes.Application.chatRoom()" class="pull-right">
                             <input id="username" name="username" class="input-small" type="text" placeholder="Username">
-                            <button class="btn" type="submit">Sign in</button>
+                            <button class="btn" type="submit">Log in</button>
                         </form>
                     }
                     
