--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,7 +20,8 @@
                     @connected.map { username =>
                         <p class="pull-right">
                             Logged in as @username —
-                            <a href="@routes.Application.index()">Disconnect</a>
+                            <a href="@routes.Application.index()">
+                            Log out</a>
                         </p>
                     }.getOrElse {
                         <form action="@routes.Application.chatRoom()" class="pull-right">
