modify chatRoom.scala.html & add a image resource

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,6 +3,7 @@
 @main(None) {
         
     <div class="alert-message block-message info">
+    	<img src="@routes.Assets.at("images/ece.png")" width="200" height="50" />
         <p>
             The system should allow a user to:
         </p>
