--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,7 +3,7 @@
 @main(None) {
         
     <div class="alert-message block-message info">
-    	<img src="@routes.Assets.at("images/ece.png")" width="200" height="50" />
+    	<div align="center"> <img src="@routes.Assets.at("images/ece.png")" width="380" height="85" /> </div>
         <p>
             The system should allow a user to:
         </p>
