--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,8 +15,7 @@
         <div class="topbar">
             <div class="fill">
                 <div class="container">
-                    <a class="brand" href="@routes.Application.index()">Welcome to FSE Chat Room</a>
-                    
+                    <a class="brand" href="@routes.Application.index()">FSE Chat Room</a>
                     @connected.map { username =>
                         <p class="pull-right">
                             Logged in as @username —
